Fix scrollbars

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,6 @@
 body {
   font-family: "Bubblegum Sans", cursive;
   color: white;
-  overflow: hidden;
 }
 
 a {
